<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewMain"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Header -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/brown_coffe"
        android:gravity="center_vertical" >

       <Button
            android:id="@+id/shoppingCartEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/icon_back" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/summary"
            android:textColor="@color/white"
            android:textStyle="bold" 
            android:textSize="18sp"
            />

        
         <Button
            android:id="@+id/shoppingCartCheckOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:text="@string/order"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
             />
        
    </RelativeLayout>

    <!-- Content -->

    <ScrollView
        android:id="@+id/contentShoppingCart"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <EditText
                android:id="@+id/edtPromotionOrder"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_line"
                android:hint="@string/add_promotion"
                android:inputType="text"
                android:padding="5dp" />

            <TextView
                android:id="@+id/txt_yourItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txtYouritems"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <!-- List items on shopping cart  android:background="@drawable/border_line" -->

            <LinearLayout
                android:id="@+id/shoppingCartList"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical" />

            <!-- Estimate Total Price -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_line"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                     android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                     >

                    <TextView
                        android:id="@+id/shoppingCartTextTotalPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtTotalPrice"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/shoppingCartEstimateTotalPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/red"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/shoppingCartEstimatePriceCurrency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="1dp"
                        android:layout_toLeftOf="@id/shoppingCartEstimateTotalPrice"
                        android:textColor="@color/red"
                        android:textStyle="bold" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/borderimage" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                     >

                    <TextView
                        android:id="@+id/shoppingCartTextTransport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtTransport"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/shoppingCartTextTransport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="đ 0"
                        android:textColor="@color/red"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/shoppingCartEstimatePriceTransport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/shoppingCartTextTransport"
                        android:text="@string/priceTransport"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@drawable/border_line"
                android:orientation="horizontal"
                android:padding="14dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtTotalSummary"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/shoppingCartEstimateTotalSummaryPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/red"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/shoppingCartSummaryPriceCurrency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_toLeftOf="@id/shoppingCartEstimateTotalSummaryPrice"
                    android:textColor="@color/red"
                    android:textStyle="bold" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnChoosePaymentGetway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@drawable/border_line"
                android:drawableRight="@drawable/next"
                android:gravity="left|center_vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:text="@string/choose_payment_getway"
                android:textColor="@color/text_normal"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textDescriptionPaymentGetway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:layout_marginTop="5dp"
                android:text="@string/payment_when_receive_product"
                android:visibility="gone"
                />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/emptyShoppingCart"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCardEmpty"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>