<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_goc_vuong"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center" >

            <ImageView
                android:id="@+id/shoppingCartItemImage"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/capuchino" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/layoutImage"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/shoppingCartItemTitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtTitlePromotion"
                android:textColor="@color/text_normal"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtPrice"
                    android:textColor="@color/text_normal" />

                <TextView
                    android:id="@+id/shoppingCartItemPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="@color/text_normal" />
	
                <TextView
                    android:id="@+id/edtShoppingCartItemQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_normal"
                    android:gravity="center"
                    android:maxLength="6" />

                <TextView
                    android:id="@+id/shoppingCartItemTotal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:textColor="@color/red"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/shoppingCartItemDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_bd"
            android:text="@string/btnDelete"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="invisible" />
    </RelativeLayout>

</LinearLayout>